Moved m_findBar->resetSearch() from closeUrl() to notifySetup()

As a side effect, this change fixes bug 303998, that caused a crash if
the part's widget was destroyed before the part itself, because
m_findBar had already been destroyed.

BUG: 303998
FIXED-IN: 4.9.0